fix the flicker

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,3 +1,7 @@
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 .dates {
     margin-top: 30px;
     font-size: 14pt;
